# ailerons-tracker-backend

./: .coverage  .dockerignore  .flaskenv  .gitignore  Dockerfile  MANIFEST.in  Procfile  README.md  back_office_test.html  compose.yaml  line_2.json  line_3.json  package-lock.json  package.json  pyproject.toml  recipe.json  requirements.txt  setup.py  test_line_1_2.json  test_line_1_3.json  test_point_1_1.json  test_point_1_2.json  test_point_1_3.json  test_recipe.json
aileronsVenv/: pyvenv.cfg
ailerons_tracker_backend/: __init__.py  cloudinary_client.py  db.py  errors.py  generator.py  gunicorn_config.py  server.py  upload_image.py
csv_upload_backend/: article_model.py  cloudinary_client.py  errors.py  gunicorn_config.py  record_model.py  server.py
geojson_formatter/: basicRecipe.json  geojsonGenerator.py  properties.py  supabaseClient.py  testScript.py  tilesetsJobs.py
migrations/: env.py
tests/: back_office_test.html  cloudinary_tests.py  conftest.py  e2e_tests.py  generator_tests.py  image_tests.py  ind_select_tests.py  login_tests.py  models_test.py  route_tests.py  supabase_tests.py  test_upload_depth.csv  test_upload_loc.csv
tracker-requests/: bruno.json
uploaded_csv/: 234222-1-GPE32.csv  export-collection-all-properties-untitled-collection-2024-01-22.csv  export-collection-all-properties-untitled-collection-2024-01-221.csv  export-collection-all-properties-untitled-collection-2024-01-222.csv  export-collection-all-properties-whale-shark-movements-in-gulf-of-mexico-2024-01-08.csv  test_upload_csv.csv  test_upload_depth
uploaded_img/: do_not_delete
(+109 files in other folders)
