[tool.poetry]
name = "ailerons-tracker-backend"
version = "0.1.0"
description = ""
authors = ["LouisCoutel <louiscoutel75@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cloudinary = "^1.40.0"
flask = "^3.0.3"
flask-cors = "^4.0.1"
flask-htmx = "^0.3.2"
flask-login = "^0.6.3"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
geojson = "^3.1.0"
gunicorn = "^22.0.0"
jinja2 = "^3.1.4"
jinja-partials = "^0.2.1"
numpy = "^2.0.0"
pylint = "^3.2.5"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.31"
supabase = "^2.5.1"
wtforms = "^3.1.2"
pandas = "^2.2.2"
pytest = "^8.2.2"
psycopg2 = "^2.9.9"
flask-migrate = "^4.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

